gitops/apps/security/wazuh/overlays/existing-certs/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wazuh-api
  namespace: wazuh
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
spec:
  tls:
    - hosts:
        - wazuh-api.michaelwilkes.dev
      secretName: wazuh-api-tls
  rules:
    - host: wazuh-api.michaelwilkes.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wazuh
                port:
                  number: 55000
